force-app/main/default/objects/TVE_File_Classification_Mapping__mdt/TVE_File_Classification_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>TVE File Classification Mapping</label>
    <pluralLabel>TVE File Classification Mappings</pluralLabel>
</CustomObject>