force-app/main/default/objects/TVE_File_Classification_Mapping__mdt/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prelim Estimate</fullName>
                <default>true</default>
                <label>Prelim Estimate</label>
            </value>
            <value>
                <fullName>Firm Offer Letter</fullName>
            </value>
            <value>
                <fullName>Drawings</fullName>
            </value>
            <value>
                <fullName>Technical Specs</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>ACCC form</fullName>
            </value>
            <value>
                <fullName>CRAB form</fullName>
            </value>
            <value>
                <fullName>Audit reports</fullName>
            </value>
            <value>
                <fullName>Co-ordination letters</fullName>
            </value>
            <value>
                <fullName>Easements/ MOA</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Leases</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referrals</fullName>
            </value>
            <value>
                <fullName>Impact Assessments</fullName>
            </value>
            <value>
                <fullName>Progress Reports</fullName>
            </value>
            <value>
                <fullName>Signed Contracts</fullName>
            </value>
            <value>
                <fullName>Suppliers Quotations</fullName>
            </value>
            <value>
                <fullName>Variations / Change Requested</fullName>
            </value>
            <value>
                <fullName>Plan Of Subdivision</fullName>
            </value>
            <value>
                <fullName>Load Calculation</fullName>
            </value>
            <value>
                <fullName>Development Plans</fullName>
            </value>
            <value>
                <fullName>Property Sketch/Site Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>