force-app/main/default/objects/TVE_File_Classification_Mapping__mdt/fields/Record_Type_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_DeveloperName__c</fullName>
    <label>Record Type DeveloperName</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer</fullName>
                <default>true</default>
                <label>Offer</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>