force-app/main/default/objects/TVE_File_Classification_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Classification__c</columns>
    <columns>Record_Type_DeveloperName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>